[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/viking.png" type="Texture" id=1]
[ext_resource path="res://KinematicBody.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
custom_solver_bias = 1.0
extents = Vector2( 14, 16 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 2 )
level_path = NodePath(".")

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.937481, 0.173608 )
scale = Vector2( 1.86804, 1.98522 )
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Rays" type="Node2D" parent="."]

[node name="LedgeDetection" type="Node2D" parent="Rays"]
position = Vector2( -0.12851, 0.257027 )

[node name="Ledge_d_top" type="RayCast2D" parent="Rays/LedgeDetection"]
show_behind_parent = true
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 17, 0 )
collision_mask = 6

[node name="Ledge_d_bot" type="RayCast2D" parent="Rays/LedgeDetection"]
show_behind_parent = true
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( 17, 0 )
collision_mask = 6

[node name="Ledge_d_up" type="RayCast2D" parent="Rays/LedgeDetection"]
position = Vector2( 20, -10 )
enabled = true
cast_to = Vector2( 0, -15 )
collision_mask = 6

[node name="ClimbDetection" type="Node2D" parent="Rays"]
visible = false

[node name="Climb_d_middle" type="RayCast2D" parent="Rays/ClimbDetection"]
position = Vector2( 0, -2 )
enabled = true
cast_to = Vector2( 18, 0 )
collision_mask = 4

[node name="Climb_d_up" type="RayCast2D" parent="Rays/ClimbDetection"]
position = Vector2( 18, -2 )
enabled = true
cast_to = Vector2( 0, -6 )
collision_mask = 4

[node name="Climb_d_down" type="RayCast2D" parent="Rays/ClimbDetection"]
position = Vector2( 18, -2 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 4
